added some pictures

--- a/_posts/2019-01-20-week2.md
+++ b/_posts/2019-01-20-week2.md
@@ -7,7 +7,10 @@ date: 2019-01-20
 
 But first... it looks delightful out there...
 
-
+<figure>
+  <img src="{{site.url}}/pictures/IMG_2860.jpeg" alt="A snowstorm"/>
+  <figcaption>I wonder how my crutches would do on the snow/ice...</figcaption>
+</figure>
 
 The worst pain was the morning after the surgery when the adductor nerve block wore off. I'd characterize it as around a 7/10, like someone had hit my knee with a hammer. Luckily the pain was controlled after a few hours on oxycodone and alternating tylenol/NSAID. I continued the oxycodone q4h for a day and tapered it over the next 2 days (q6, then q12, then q24) and alternated tylenol and ibuprofen every 12 hours, and by day 4 I was in no pain and on no pain meds. Currently, sudden movements can lead to some point tenderness at the incision sites, and pressing on my tibia is painful (which makes sense because they drilled multiple holes into that bone). But the pain has really been a non-factor in my recovery.
 
@@ -19,7 +22,14 @@ I'm still early in this process and have to figure out how to do things like coo
 
 1. A bag makes life on crutches livable. Your biggest annoyance while using crutches will not be losing mobility, but rather losing the availability of your hands. I carry a drawstring bag wherever I go now. I can put it on my back or have it in my hands while using my crutches, and I use it to carry food in tupperware between the kitchen and my room, my laptop between my room and the living room, and mail from downstairs. 
 
-2. Stay physically active. Cabin fever is unavoidable, but the day after surgery I managed to get outside (getting in and out of my 70s style elevator with two self-closing doors was quite the adventure though) and walk up and down the block. Before the snowstorm I was walking down to the river daily and seeing views like this.   Walking with crutches is physically taxing; after walking for 20 minutes I felt like I had just run 3 miles. As for indoor activities, I just figured out how to do push-ups (by crossing my left leg over my right). Using dumbbells or doing other upper body exercises are also totally doable! By staying active you'll feel better, maintain your aerobic capacity, and have the added benefit of knowing your body can still do great things. 
+2. Stay physically active. Cabin fever is unavoidable, but the day after surgery I managed to get outside (getting in and out of my 70s style elevator with two self-closing doors was quite the adventure though) and walk up and down the block. Before the snowstorm I was walking down to the river daily and seeing views like this.   
+
+<figure>
+  <img src="{{site.url}}/pictures/IMG_2857.jpeg" alt="The esplanade"/>
+  <figcaption>Boston is beautiful even on crutches.</figcaption>
+</figure>
+
+Walking with crutches is physically taxing; after walking for 20 minutes I felt like I had just run 3 miles. As for indoor activities, I just figured out how to do push-ups (by crossing my left leg over my right). Using dumbbells or doing other upper body exercises are also totally doable! By staying active you'll feel better, maintain your aerobic capacity, and have the added benefit of knowing your body can still do great things. 
 
 3. Controlling swelling makes everything easier. Of course everyone's recovery will be different, but reducing swelling will reduce your pain and improve your range of motion. I iced with a cryo-wrap almost continuously for the first week and a half, and made sure to keep my legs elevated or at least level almost the entire day. I bought a cold machine but found that the cold wrap was more useful -- it came with 4 ice packs, and could switch them out every 2 hours. I also iced and kept my legs elevated (hyperextended) while sleeping.
 
