added some pictures

--- a/_posts/2019-01-20-week2.md
+++ b/_posts/2019-01-20-week2.md
@@ -5,7 +5,7 @@ lead: "Two weeks after ACL and meniscus surgery, I am making faster progress tha
 date: 2019-01-20
 ---
 
-But first... it looks delightful out there...
+But first... it looks *delightful* out there...
 
 <figure>
   <img style="margin:0px auto;display:block" src="{{site.url}}/pictures/IMG_2860.jpeg" alt="A snowstorm" width="50%"/>
@@ -20,19 +20,19 @@ At my 1 week post-op my doc said I wouldn't be starting physical therapy until a
 
 I'm still early in this process and have to figure out how to do things like cooking complete meals and surviving an entire day in class and lab,. However, I wanted to share five things I've learned so far about surviving 6 weeks on crutches after ACL/meniscus surgery. 
 
-1. A bag makes life on crutches livable. Your biggest annoyance while using crutches will not be losing mobility, but rather losing the availability of your hands. I carry a drawstring bag wherever I go now. I can put it on my back or have it in my hands while using my crutches, and I use it to carry food in tupperware between the kitchen and my room, my laptop between my room and the living room, and mail from downstairs. 
+**1. A bag makes life on crutches livable.** Your biggest annoyance while using crutches will not be losing mobility, but rather losing the availability of your hands. I carry a drawstring bag wherever I go now. I can put it on my back or have it in my hands while using my crutches, and I use it to carry food in tupperware between the kitchen and my room, my laptop between my room and the living room, and mail from downstairs. 
 
-2. Stay physically active. Cabin fever is unavoidable, but the day after surgery I managed to get outside (getting in and out of my 70s style elevator with two self-closing doors was quite the adventure though) and walk up and down the block. Before the snowstorm I was walking down to the river daily and seeing views like this.   
+**2. Stay physically active.** Cabin fever is unavoidable, but the day after surgery I managed to get outside (getting in and out of my 70s style elevator with two self-closing doors was quite the adventure though) and walk up and down the block. Before the snowstorm I was walking down to the river daily and seeing views like this.   
 
-<figure>
-  <img style="margin:0px auto;display:block" src="{{site.url}}/pictures/IMG_2857.jpeg" alt="The esplanade" width="50%"/>
-  <figcaption align="center">Boston is beautiful even on crutches.</figcaption>
-</figure>
+	<figure>
+	  <img style="margin:0px auto;display:block" src="{{site.url}}/pictures/IMG_2857.jpeg" alt="The esplanade" width="50%"/>
+	  <figcaption align="center">Boston is beautiful even on crutches.</figcaption>
+	</figure>
 
 Walking with crutches is physically taxing; after walking for 20 minutes I felt like I had just run 3 miles. As for indoor activities, I just figured out how to do push-ups (by crossing my left leg over my right). Using dumbbells or doing other upper body exercises are also totally doable! By staying active you'll feel better, maintain your aerobic capacity, and have the added benefit of knowing your body can still do great things. 
 
-3. Controlling swelling makes everything easier. Of course everyone's recovery will be different, but reducing swelling will reduce your pain and improve your range of motion. I iced with a cryo-wrap almost continuously for the first week and a half, and made sure to keep my legs elevated or at least level almost the entire day. I bought a cold machine but found that the cold wrap was more useful -- it came with 4 ice packs, and could switch them out every 2 hours. I also iced and kept my legs elevated (hyperextended) while sleeping.
+** 3. Controlling swelling makes everything easier.** Of course everyone's recovery will be different, but reducing swelling will reduce your pain and improve your range of motion. I iced with a cryo-wrap almost continuously for the first week and a half, and made sure to keep my legs elevated or at least level almost the entire day. I bought a cold machine but found that the cold wrap was more useful -- it came with 4 ice packs, and could switch them out every 2 hours. I also iced and kept my legs elevated (hyperextended) while sleeping.
 
-4. Make a list of goals for the six weeks, and try to do a little every day. One of the silver linings of being home for six weeks has been the protected time. I can't think of any point in the past several years, or the next decade, where I will be given six weeks to just learn whatever I want. Several months before my surgery I started a list of things I wanted to accomplish -- several TV shows to watch, fields to read about, projects to wrap up, or little errands that have sat on the back burner -- and now is the time to do it.
+**4. Make a list of goals for the six weeks, and try to do a little every day.** One of the silver linings of being home for six weeks has been the protected time. I can't think of any point in the past several years, or the next decade, where I will be given six weeks to just learn whatever I want. Several months before my surgery I started a list of things I wanted to accomplish -- several TV shows to watch, fields to read about, projects to wrap up, or little errands that have sat on the back burner -- and now is the time to do it.
 
-5. Cut yourself a lot of slack. Activities as simple as going to the bathroom will be longer because you have to remove your ice pack, put on your brace, crutch to the bathroom, figure out how to pee on one foot, and do everything again in reverse. There will be days when you don't want to do anything but stare at the TV. And that's okay. You need to give yourself the time and the space to heal. Your knee will thank you for slowing down, because slipping and falling from rushing in the shower is absolutely not worth the two minutes you would save. Finally, the road ahead will be a lot tougher -- you need to be ready.
+**5. Cut yourself a lot of slack.** Activities as simple as going to the bathroom will be longer because you have to remove your ice pack, put on your brace, crutch to the bathroom, figure out how to pee on one foot, and do everything again in reverse. There will be days when you don't want to do anything but stare at the TV. And that's okay. You need to give yourself the time and the space to heal. Your knee will thank you for slowing down, because slipping and falling from rushing in the shower is absolutely not worth the two minutes you would save. Finally, the road ahead will be a lot tougher -- you need to be ready.
