added some pictures

--- a/_posts/2019-01-08-acl.md
+++ b/_posts/2019-01-08-acl.md
@@ -11,18 +11,23 @@ As a med student around this time last year, I never expected I would soon be th
 
 My surgery day looked like this:
 
-10pm (the night before): can't drink anything except water and apple juice
-3am: wake up and drink some apple juice, try to get back to bed
-4:30am: wake up, Uber to the surgery center
-5:45am: we are the first ones there. it is lightly snowing outside. 
-6:20am: I get called in. they switch out my clothes for a hospital issued gown, let me try on crutches, and start me on some pain meds. 
-6:40am: Adductor nerve block. The anesthesiologist is super nice and knows I'm a med student, so she takes time to show me what she's looking for on ultrasound. She also tells me how nice the anesthesia life is.
-7:15am: Dad comes in for a quick hello, then I'm wheeled in. A little nervous but falling asleep is nice...
+- 10pm (the night before): can't drink anything except water and apple juice
+- 3am: wake up and drink some apple juice, try to get back to bed
+- 4:30am: wake up, Uber to the surgery center
+- 5:45am: we are the first ones there. it is lightly snowing outside. 
+- 6:20am: I get called in. they switch out my clothes for a hospital issued gown, let me try on crutches, and start me on some pain meds. 
+- 6:40am: Adductor nerve block. The anesthesiologist is super nice and knows I'm a med student, so she takes time to show me what she's looking for on ultrasound. She also tells me how nice the anesthesia life is.
+- 7:15am: Dad comes in for a quick hello, then I'm wheeled in. A little nervous but falling asleep is nice...
+- ~10am: I wake up in the OR to someone asking me if I can move over to the stretcher. I say "of course not" to which everyone laughs. Groggy, sleeping on and off for the next hour.
+- 11am: waking up more. Leg is completely numb and I am in no pain. 
 
-~10am: I wake up in the OR to someone asking me if I can move over to the stretcher. I say "of course not" to which everyone laughs. Groggy, sleeping on and off for the next hour.
-11am: waking up more. Leg is completely numb and I am in no pain. 
-11:30am: first time on crutches. A little wobbly but I make it to the bathroom and back.
-12pm: they discharge me. After a 30 minute uber ride where I am sprawled horizontally in the back seat because my leg brace is locked flat, I am home. 
+<figure>
+  <img style="margin:0px auto;display:block" src="{{site.url}}/pictures/foot.jpg" alt="My leg after surgery" width="50%"/>
+  <figcaption align="center">In post-op, my leg nicely wrapped up in an ice pack and elevated</figcaption>
+</figure>
+
+- 11:30am: first time on crutches. A little wobbly but I make it to the bathroom and back.
+- 12pm: they discharge me. After a 30 minute uber ride where I am sprawled horizontally in the back seat because my leg brace is locked flat, I am home. 
 
 The rest of the day I watched Grey's Anatomy and tried to elevate my leg. There was no pain whatsoever so I was quite comfortable. I'm sure this will change soon, and I will post updates!
 
